# terminal-log-highlighter

./: .gitignore  .sentinel.toml  Cargo.toml  Readme.md  install.sh  rune.toml
.github/workflows/: ci.yml  release.yml
benches/: allocations.rs  latency.rs  throughput.rs
matcher/: classifier.rs  mod.rs  threshold.rs
runtime/: chunk_reader.rs  events.rs  mod.rs  passthrough.rs  processor.rs
src/: lib.rs  main.rs
src/config/: defaults.rs  loader.rs  mod.rs  schema.rs
src/matcher/: aho.rs  classifier.rs  mod.rs  regex.rs  simple.rs  threshold.rs
src/parser/: ansi_fsm.rs  mod.rs  tokenizer.rs
src/renderer/: ansi.rs  flush.rs  mod.rs  passthrough.rs
src/runtime/: chunk_reader.rs  events.rs  line_assembler.rs  mod.rs  passthrough.rs  processor.rs  stream.rs
src/terminal/: mod.rs  pty.rs  session.rs  stdout.rs
