[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2"
aho-corasick = "1"
regex = { version = "1", features = ["bytes"] }
toml = "0.8"
portable-pty = "0.8"

[features]
default = []
regex = ["dep:regex"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

# Benchmarking
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "allocations"
harness = false